zerotrust_config/openziti/clusterZT-setting/k8s_sidecar/ingress.yml
# my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # optional if not using HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.example.com # Update this to match your domain or /etc/hosts
      http:
        paths:
          - path: /preprocessing
            pathType: Prefix
            backend:
              service:
                name: preprocessing-service
                port:
                  number: 5010
